tests/expectations/compiler/integers/i128/max_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372008]: The value 170141183460469231731687303715884105728 is not a valid `i128`
    --> compiler-test:5:23
     |
   5 |         let a: i128 = 170141183460469231731687303715884105728i128;
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
